fix image overflow

--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,7 @@ nav {
 }
 
 .news-article {
+  transition: all 0.3s;
   width: 100%;
   height: 20vh;
   margin-block: 1em;
@@ -101,17 +102,42 @@ nav {
   gap: 0px 0px; 
   grid-template-areas: 
     "image info info"; 
+    overflow: hidden;
+}
+
+.news-article:hover {
+  border: 1px solid #555;
 }
 
 .article-info {
   grid-area: info;
   padding: 1em;
   line-height: 1;
+  max-height: 20vh;
+  margin: 0;
+}
+
+.article-info {
+  margin-bottom: 0.5em;
 }
 
 .article-info p {
+  padding: 0;
   color: #444;
   line-height: 1;
+  height: 10vh;
+  text-overflow: ellipsis;
+}
+
+.article-image {
+  object-fit: fill;
+}
+
+.article-image img {
+  height: 20vh;
+  border-radius: 10px;
+  height: 100%;
+  object-fit: cover;
 }
 
 .fadein {
